--- a/index.html
+++ b/index.html
@@ -1,60 +1,154 @@
-<div>Teachable Machine Image Model</div>
-<button type="button" onclick="init()">Start</button>
-<div id="webcam-container"></div>
-<div id="label-container"></div>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
-<script type="text/javascript">
-    // More API functions here:
-    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI 자세 인식 웹앱</title>
 
-    // the link to your model provided by Teachable Machine export panel
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+
+  <style>
+    * {
+      box-sizing: border-box;
+      font-family: "Pretendard", "Apple SD Gothic Neo", sans-serif;
+    }
+
+    body {
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(135deg, #dfe9f3, #ffffff);
+      transition: background 0.6s ease;
+    }
+
+    body.good {
+      background: linear-gradient(135deg, #84fab0, #8fd3f4);
+    }
+
+    body.bad {
+      background: linear-gradient(135deg, #ff758c, #ff7eb3);
+    }
+
+    .app {
+      width: 380px;
+      background: white;
+      border-radius: 24px;
+      padding: 24px;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
+      text-align: center;
+    }
+
+    h1 {
+      margin: 0 0 16px 0;
+      font-size: 22px;
+    }
+
+    button {
+      padding: 10px 18px;
+      border: none;
+      border-radius: 20px;
+      background: linear-gradient(135deg, #667eea, #764ba2);
+      color: white;
+      font-size: 14px;
+      cursor: pointer;
+      margin-bottom: 16px;
+    }
+
+    button:hover {
+      opacity: 0.9;
+    }
+
+    #webcam-container canvas {
+      border-radius: 16px;
+      margin-bottom: 12px;
+    }
+
+    #label-container div {
+      background: #f4f6fb;
+      border-radius: 12px;
+      padding: 8px 12px;
+      margin-bottom: 6px;
+      font-size: 14px;
+    }
+
+    .status {
+      margin-top: 12px;
+      font-weight: bold;
+      font-size: 16px;
+    }
+  </style>
+</head>
+<body>
+  <div class="app">
+    <h1>AI 자세 인식</h1>
+    <button onclick="init()">카메라 시작</button>
+    <div id="webcam-container"></div>
+    <div id="label-container"></div>
+    <div id="status" class="status">자세를 인식 중입니다</div>
+  </div>
+
+  <script>
     const URL = "./my_model/";
 
     let model, webcam, labelContainer, maxPredictions;
 
-    // Load the image model and setup the webcam
     async function init() {
-        const modelURL = URL + "model.json";
-        const metadataURL = URL + "metadata.json";
+      const modelURL = URL + "model.json";
+      const metadataURL = URL + "metadata.json";
 
-        // load the model and metadata
-        // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
-        // or files from your local hard drive
-        // Note: the pose library adds "tmImage" object to your window (window.tmImage)
-        model = await tmImage.load(modelURL, metadataURL);
-        maxPredictions = model.getTotalClasses();
+      model = await tmImage.load(modelURL, metadataURL);
+      maxPredictions = model.getTotalClasses();
 
-        // Convenience function to setup a webcam
-        const flip = true; // whether to flip the webcam
-        webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
-        await webcam.setup(); // request access to the webcam
-        await webcam.play();
-        window.requestAnimationFrame(loop);
+      webcam = new tmImage.Webcam(240, 240, true);
+      await webcam.setup();
+      await webcam.play();
+      window.requestAnimationFrame(loop);
 
-        // append elements to the DOM
-        document.getElementById("webcam-container").appendChild(webcam.canvas);
-        labelContainer = document.getElementById("label-container");
-        for (let i = 0; i < maxPredictions; i++) { // and class labels
-            labelContainer.appendChild(document.createElement("div"));
-        }
+      document.getElementById("webcam-container").appendChild(webcam.canvas);
+      labelContainer = document.getElementById("label-container");
+      labelContainer.innerHTML = "";
+      for (let i = 0; i < maxPredictions; i++) {
+        labelContainer.appendChild(document.createElement("div"));
+      }
     }
 
     async function loop() {
-        webcam.update(); // update the webcam frame
-        await predict();
-        window.requestAnimationFrame(loop);
+      webcam.update();
+      await predict();
+      window.requestAnimationFrame(loop);
     }
 
-    // run the webcam image through the image model
     async function predict() {
-        // predict can take in an image, video or canvas html element
-        const prediction = await model.predict(webcam.canvas);
-        for (let i = 0; i < maxPredictions; i++) {
-            const classPrediction =
-                prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-            labelContainer.childNodes[i].innerHTML = classPrediction;
-        }
-    }
+      const prediction = await model.predict(webcam.canvas);
 
-</script>
+      let goodProb = 0;
+      let badProb = 0;
+
+      for (let i = 0; i < maxPredictions; i++) {
+        const p = prediction[i];
+        labelContainer.childNodes[i].innerHTML = `${p.className} : ${(p.probability * 100).toFixed(1)}%`;
+
+        if (p.className.includes("바른")) goodProb = p.probability;
+        if (p.className.includes("안좋")) badProb = p.probability;
+      }
+
+      const body = document.body;
+      const status = document.getElementById("status");
+
+      if (goodProb > 0.5) {
+        body.className = "good";
+        status.innerText = "✅ 바른 자세입니다";
+      } else if (badProb > 0.5) {
+        body.className = "bad";
+        status.innerText = "⚠️ 자세를 교정하세요";
+      } else {
+        body.className = "";
+        status.innerText = "자세를 분석 중입니다";
+      }
+    }
+  </script>
+</body>
+</html>
